--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "runa-sensei",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "typescript": "^4.2.2"
-  }
+	"name": "runa-sensei",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@chakra-ui/icons": "^1.0.5",
+		"@chakra-ui/react": "^1.3.3",
+		"@emotion/react": "^11.1.5",
+		"@emotion/styled": "^11.1.5",
+		"framer-motion": "^3.7.0",
+		"next": "10.0.7",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-firebase-hooks": "^2.2.0",
+		"react-hook-form": "^6.15.4"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.31",
+		"@types/react": "^17.0.2",
+		"firebase": "^8.2.9",
+		"typescript": "^4.2.2"
+	}
 }
