--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
 		"framer-motion": "^3.7.0",
+		"googleapis": "^67.1.1",
 		"next": "10.0.7",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
