--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_API_KEY=AIzaSyD1miRJK_DESGZ5w2HuJBDd_6MdTpeWjBE
 GOOGLE_CLIENT_ID=938672571350-qiaef08rs3aovafrkg388vd1l06gqnfu.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=6JF2lOQLXwTciBsbZaOY3LoD
