--- a/package.json
+++ b/package.json
@@ -13,21 +13,16 @@
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
 		"framer-motion": "^3.7.0",
-		"googleapis": "^67.1.1",
 		"next": "10.0.7",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
-		"react-firebase-hooks": "^2.2.0",
-		"react-hook-form": "^6.15.4"
+		"react-google-calendar-api": "^1.3.1"
 	},
 	"devDependencies": {
+		"@firebase/auth-types": "^0.10.2",
 		"@types/node": "^14.14.31",
 		"@types/react": "^17.0.2",
-		"dotenv": "^8.2.0",
 		"firebase": "^8.2.9",
 		"typescript": "^4.2.2"
-	},
-	"browser": {
-		"child_process": false
 	}
 }
