--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
 		"framer-motion": "^3.7.0",
 		"next": "10.0.7",
 		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"react-google-calendar-api": "^1.3.1"
+		"react-dom": "17.0.1"
 	},
 	"devDependencies": {
 		"@firebase/auth-types": "^0.10.2",
+		"@types/gapi.auth2": "^0.0.53",
+		"@types/gapi.client.calendar": "^3.0.10",
 		"@types/node": "^14.14.31",
 		"@types/react": "^17.0.2",
 		"firebase": "^8.2.9",
+		"react-firebase-hooks": "^3.0.1",
 		"typescript": "^4.2.2"
 	}
 }
